objects/AsiaMaintenanceAccountBook__c.object
<CustomObject>
    <fields>
        <fullName>BillingAmountFormula__c</fullName>
        <formula>IF( ISNULL(BillingAmount__c) , &apos;&apos;, TEXT(MaintenanceContractManagement__r.CurrencyContractPrice__c) &amp; &quot; &quot; ) 
&amp; 
CASE 
( LEN(TEXT(BillingAmount__c)) , 
1, TEXT(BillingAmount__c), 
2, TEXT(BillingAmount__c), 
3, TEXT(BillingAmount__c), 
4, LEFT(TEXT(BillingAmount__c), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
5, LEFT(TEXT(BillingAmount__c), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
6, LEFT(TEXT(BillingAmount__c), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
7, LEFT(TEXT(BillingAmount__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
8, LEFT(TEXT(BillingAmount__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
9, LEFT(TEXT(BillingAmount__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
10, LEFT(TEXT(BillingAmount__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 5, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
11, LEFT(TEXT(BillingAmount__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 6, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
12, LEFT(TEXT(BillingAmount__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(BillingAmount__c), 7, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(BillingAmount__c), 3), 
null 
) 
&amp; IF( ISNULL(BillingAmount__c) , &apos;&apos;, &quot;.00&quot;)</formula>
        <label>Billing Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAmount__c</fullName>
        <label>Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InspectionDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement__c</fullName>
        <label>Maintenance Contract Management</label>
        <referenceTo>AsiaMaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>Maintenance Account Book (MaintenanceContractManagement)</relationshipLabel>
        <relationshipName>MaintenanceAccountBook</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentAmountFormula__c</fullName>
        <formula>IF( OR(ISNULL(PaymentAmount__c), ISBLANK(PaymentAmount__c))  , 
    &quot;&quot;,
    TEXT(MaintenanceContractManagement__r.CurrencyContractPrice__c) &amp;
    &quot; &quot; 
    &amp;
    CASE ( LEN(TEXT(PaymentAmount__c)) , 
          1, TEXT(PaymentAmount__c), 
          2, TEXT(PaymentAmount__c), 
          3, TEXT(PaymentAmount__c), 
          4, LEFT(TEXT(PaymentAmount__c), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
          5, LEFT(TEXT(PaymentAmount__c), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
          6, LEFT(TEXT(PaymentAmount__c), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
          7, LEFT(TEXT(PaymentAmount__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
          8, LEFT(TEXT(PaymentAmount__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
          9, LEFT(TEXT(PaymentAmount__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
         10, LEFT(TEXT(PaymentAmount__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 5, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
         11, LEFT(TEXT(PaymentAmount__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 6, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
         12, LEFT(TEXT(PaymentAmount__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(PaymentAmount__c), 7, 3) &amp; &quot; &quot; &amp; RIGHT(TEXT(PaymentAmount__c), 3), 
         null 
         ) 
  )</formula>
        <label>Payment Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Maintenance Account Book</label>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>